2004-10-30  Francois Dumont  <dums@stlport...>

	* src/explore/Makefiles/nmake/vc-common.mak: introductions of the LDFLAGS_A_REL
	macro to fix config problem under VC71 and VC8 beta.

2004-10-29  Petr Ovtchenkov  <ptr@island...>

	* src/explore/Makefiles/gmake/app/gcc.mak: use -fPIC for gcc 2.95.x when build
	application---this is a workaround for bug with running code in static constructors.

	* stlport/config/stl_gcc.h, stlport/stl/_config.h: force usage of mutex instead
	of spinlock for gcc 2.95.x, due to problems with initialization of statics.
	Initialization of mutex has variant with structure filling, while for spinlock
	initialization function call required.

	* test/unit/locale_test.cpp: avoid static object for gcc 2.95.x, due to problems
	with initialization of statics.

2004-10-27  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h, _fstream.h, _ios.h, _istream.h, _monetary.h, _num_get.h,
	_num_put.h, _ostream.h, _sstream.h, _streambuf.h, _string.h, _time_facets.h:
	Restoration of the _STLP_NO_CUSTOM_IO feature removed after cleanup reported
	in 2004-09-28 post from Petr.

	* stlport/stl/stl_user_config.h, _config.h, stl_msvc.h: reactivation of the 
	auto link feature for MSVC but only if activated by the client. Moreover the
	new implementation of this feature is more maintenable, stl_msvc.h won't have
	to be edited at each STLport release.

	* test/unit/nmake-vc-common.mak, nmake-evc-common.mak: Adoption of the auto link
	process.

2004-10-25  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h: Introduction of the _STLP_DONT_USE_EXCEPTIONS which 
	means that the client do not want to use the C++ exception feature. It is
	different from the _STLP_NO_EXCEPTIONS which means that the compiler do not
	support exceptions at all. The distinction is important for some macros definition.
	
	* test/unit: Modification of the _STLP_NO_EXCEPTIONS test to the more general
	_STLP_USE_EXCEPTION macro.
